# ardrone

./: .gitignore  README.txt  make.bat
ardrone/: CMakeLists.txt  ardrone_toolchain_setup.cmake  cmake_install.cmake  make.bat
ardrone/attitude/: CMakeLists.txt  ars.c  ars.h  attitude.c  attitude.h  cmake_install.cmake  main_attitude.c
ardrone/fly/: CMakeLists.txt  cmake_install.cmake  controlthread.c  controlthread.h  fly  main_fly.c  make.bat  pid.c  pid.h
ardrone/motorboard/: CMakeLists.txt  cmake_install.cmake  main_motorboard.c  mot.c  mot.h  motorboard.c  motorboard.h
ardrone/navboard/: CMakeLists.txt  cmake_install.cmake  main_navboard.c  make.bat  navboard.c  navboard.h
ardrone/udp/: CMakeLists.txt  cmake_install.cmake  main_udpclient.c  main_udpserver.c  make.bat  udp.c  udp.h
ardrone/util/: type.h  util.c  util.h
ardrone/vbat/: CMakeLists.txt  cmake_install.cmake  main_vbat.c  make.bat  vbat.c  vbat.h
ardrone/video/: main_video.c  video.c  video.h
attitude/: ars.c  ars.h  attitude.c  attitude.h  main_attitude.c  make.bat
gpio/: main_gpio.c  make.bat
motorboard/: main_motorboard.c  make.bat  mot.c  mot.h  motorboard.c  motorboard.h
navboard/: main_navboard.c  navboard.c  navboard.h
pc/: OpenFlight.sln
pc/OpenFlight/: Drone.cs  Form1.Designer.cs  Form1.cs  Form1.resx  InterceptKeys.cs  OpenFlight.csproj  Program.cs  UdpLogger.cs
pc/OpenFlight/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
util/: type.h  util.c  util.h
vbat/: i2c-dev.h  vbat.c  vbat.h
video/: main_video.c  make.bat  video.h
